--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,13 @@ set_source_files_properties( ${CMAKE_CURRENT_BINARY_DIR}/${VERSION_FILE_NAME} PR
 add_executable( nan_bruker Source/nan_bruker.cpp )
 add_dependencies( nan_bruker nan_version )
 target_link_libraries( nan_bruker ${ITK_LIBRARIES} )
+install( TARGETS nan_bruker RUNTIME DESTINATION bin )
 
-set( PROGRAMS ${UTILS} ${QUANT} ${ELLIPSE} )
-install( TARGETS ${PROGRAMS} RUNTIME DESTINATION bin )
+set(SCRIPTS_DIR Scripts)
+set(SCRIPTS bruker_convert.sh)
+foreach(SCRIPT ${SCRIPTS})
+    INSTALL( FILES ${SCRIPTS_DIR}/${SCRIPT} 
+             DESTINATION bin 
+             PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
+                         OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE )
+endforeach(SCRIPT)
