ENH: Split IO into separate file to speed compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ add_custom_command( OUTPUT version_depend_dummy
                     COMMAND ${CMAKE_COMMAND} -P ${CMAKE_MODULE_PATH}/GetVersion.cmake )
 set_source_files_properties( ${CMAKE_CURRENT_BINARY_DIR}/${VERSION_FILE_NAME} PROPERTIES GENERATED TRUE HEADER_FILE_ONLY TRUE )
 
-add_executable( nan_bruker Source/nan_bruker.cpp )
+add_executable( nan_bruker Source/nan_bruker.cpp Source/IO.cpp )
 add_dependencies( nan_bruker nan_version )
 target_link_libraries( nan_bruker ${ITK_LIBRARIES} )
 install( TARGETS nan_bruker RUNTIME DESTINATION bin )
