ENH: Refactored Util/IO into a library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ set( Args_DIR "${PROJECT_SOURCE_DIR}/External/args"
 set( SRC_DIR "${PROJECT_SOURCE_DIR}/Source" )
 set( CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake" )
 include_directories( "${SRC_DIR}" "${Args_DIR}" )
-# Setup version
+
+# Version File
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} ) # For version file
 set( VERSION_FILE_NAME "VersionFile" )
 add_custom_target( nan_version ALL DEPENDS version_depend_dummy )
@@ -21,14 +22,17 @@ add_custom_command( OUTPUT version_depend_dummy
                     COMMAND ${CMAKE_COMMAND} -P ${CMAKE_MODULE_PATH}/GetVersion.cmake )
 set_source_files_properties( ${CMAKE_CURRENT_BINARY_DIR}/${VERSION_FILE_NAME} PROPERTIES GENERATED TRUE HEADER_FILE_ONLY TRUE )
 
-add_executable( nanconvert_bruker Source/nanconvert_bruker.cpp Source/IO.cpp )
+# Main Library
+add_library( Convert STATIC ${SRC_DIR}/IO.cpp ${SRC_DIR}/Util.cpp )
+
+add_executable( nanconvert_bruker ${SRC_DIR}/nanconvert_bruker.cpp )
 add_dependencies( nanconvert_bruker nan_version )
-target_link_libraries( nanconvert_bruker ${ITK_LIBRARIES} )
+target_link_libraries( nanconvert_bruker ${ITK_LIBRARIES} Convert )
 install( TARGETS nanconvert_bruker RUNTIME DESTINATION bin )
 
-add_executable( nanconvert_dicom Source/nanconvert_dicom.cpp Source/IO.cpp )
+add_executable( nanconvert_dicom ${SRC_DIR}/nanconvert_dicom.cpp )
 add_dependencies( nanconvert_dicom nan_version )
-target_link_libraries( nanconvert_dicom ${ITK_LIBRARIES} )
+target_link_libraries( nanconvert_dicom ${ITK_LIBRARIES} Convert )
 install( TARGETS nanconvert_dicom RUNTIME DESTINATION bin )
 
 set( SCRIPTS_DIR Scripts )
