BUG: No need to abort if header field can't be read

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "External/args"]
 	path = External/args
 	url = https://github.com/Taywee/args.git
+[submodule "External/ITK"]
+	path = External/ITK
+	url = https://github.com/spinicist/ITK
