--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,8 @@ add_dependencies( nanconvert_bruker nanconvert_version )
 target_link_libraries( nanconvert_bruker Convert ${ITK_LIBRARIES} )
 install( TARGETS nanconvert_bruker RUNTIME DESTINATION bin )
 
-include_directories( "External/fmt/include" )
-add_executable( nanconvert_dicom ${SRC_DIR}/nanconvert_dicom.cpp External/fmt/src/format.cc )
+include_directories( "External/spdlog/include" )
+add_executable( nanconvert_dicom ${SRC_DIR}/nanconvert_dicom.cpp )
 add_dependencies( nanconvert_dicom nanconvert_version )
 target_link_libraries( nanconvert_dicom Convert ${ITK_LIBRARIES} )
 install( TARGETS nanconvert_dicom RUNTIME DESTINATION bin )
