BLD Switch to vcpkg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,56 +1,65 @@
-cmake_minimum_required( VERSION 3.2 FATAL_ERROR )
+cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
+cmake_policy(VERSION 3.12)
 
-project( NANCONVERT CXX )
-set( CMAKE_CXX_STANDARD 17 )
-set( CMAKE_CXX_STANDARD_REQUIRED on )
-add_compile_options("-Wall" "-Wextra" "-Wshadow" "-ftemplate-backtrace-limit=30")
-aux_source_directory(. SRC_LIST )
-include( CheckCXXCompilerFlag )
-include( CMakeToolsHelpers OPTIONAL )
+project(NANCONVERT CXX)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED on)
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMake)
 set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${PROJECT_SOURCE_DIR}/CMake)
-include( ${PROJECT_SOURCE_DIR}/CMake/BuildType.cmake )
+include(CheckCXXCompilerFlag)
+include(CMakeToolsHelpers OPTIONAL)
+include(CMakePrintHelpers)
 
-set( External_Include_DIR "${PROJECT_SOURCE_DIR}/include"
-     CACHE PATH "Path to vendored includes (usually /include" )
-include_directories( SYSTEM ${External_Include_DIR} )
-
-# fmtlib: Sane output
-find_package(fmtlib REQUIRED CONFIG)
-if(fmtlib_FOUND)
-    add_library(fmtlib STATIC ${FMTLIB_SOURCES})
-    target_include_directories(fmtlib SYSTEM PUBLIC ${FMTLIB_INCLUDE_DIR})
+include(${PROJECT_SOURCE_DIR}/CMake/BuildType.cmake)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++" CACHE INTERNAL "" FORCE)
 endif()
+add_compile_options("-Wall" "-Wextra" "-Wshadow" "-ftemplate-backtrace-limit=30")
 
+find_package(args CONFIG REQUIRED)
+find_package(fmt REQUIRED CONFIG)
 find_package(ITK 5.0.0
               COMPONENTS
                 ITKCommon
-                ITKIOGDCM
                 ITKIOImageBase
+                ITKIOGDCM
+                ITKIONIFTI
                 ITKImageCompose
                 ITKImageGrid
-                ITKImageIO
-              REQUIRED )
-include( ${ITK_USE_FILE} )
+              REQUIRED)
+include(${ITK_USE_FILE})
 
 # Main Library
-set( SRC_DIR "${PROJECT_SOURCE_DIR}/Source" )
-add_library( Convert STATIC ${SRC_DIR}/IO.cpp ${SRC_DIR}/Util.cpp )
+set(SRC_DIR "${PROJECT_SOURCE_DIR}/Source")
+add_library(Convert STATIC ${SRC_DIR}/IO.cpp ${SRC_DIR}/Util.cpp)
+target_link_libraries(Convert ${ITK_LIBRARIES})
+cmake_print_variables(${ITK_LIBRARIES})
 
-add_executable( nanconvert_bruker ${SRC_DIR}/nanconvert_bruker.cpp )
-target_link_libraries( nanconvert_bruker Convert ${ITK_LIBRARIES} fmtlib )
-install( TARGETS nanconvert_bruker RUNTIME DESTINATION bin )
+add_executable(nanconvert_bruker ${SRC_DIR}/nanconvert_bruker.cpp)
+target_link_libraries(nanconvert_bruker
+  Convert
+  taywee::args
+  fmt::fmt
+  ${ITK_LIBRARIES}
+)
+install(TARGETS nanconvert_bruker RUNTIME DESTINATION bin)
 
-add_executable( nanconvert_dicom ${SRC_DIR}/nanconvert_dicom.cpp )
-target_link_libraries( nanconvert_dicom Convert ${ITK_LIBRARIES} fmtlib )
-install( TARGETS nanconvert_dicom RUNTIME DESTINATION bin )
+add_executable(nanconvert_dicom ${SRC_DIR}/nanconvert_dicom.cpp)
+target_link_libraries(nanconvert_dicom 
+  Convert
+  taywee::args
+  fmt::fmt
+  ${ITK_LIBRARIES}
+)
+install(TARGETS nanconvert_dicom RUNTIME DESTINATION bin)
 
-set( SCRIPTS_DIR Scripts )
-set( SCRIPTS nanbruker nanbruker_sge.qsub nandicom )
-foreach( SCRIPT ${SCRIPTS} )
-    INSTALL( FILES ${SCRIPTS_DIR}/${SCRIPT} 
+set(SCRIPTS_DIR Scripts)
+set(SCRIPTS nanbruker nanbruker_sge.qsub nandicom)
+foreach(SCRIPT ${SCRIPTS})
+    INSTALL(FILES ${SCRIPTS_DIR}/${SCRIPT} 
              DESTINATION bin 
              PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                          GROUP_READ GROUP_EXECUTE
-                         WORLD_READ WORLD_EXECUTE )
-endforeach( SCRIPT )
+                         WORLD_READ WORLD_EXECUTE)
+endforeach(SCRIPT)
